3D view's depth of field isn't displayed correctly with scene units scale #48157

Closed
opened 2016-04-15 15:46:04 +02:00 by Michael Soluyanov · 4 comments

Blender Version
Broken: 2.77

3D view's depth of field isn't displayed correctly with scene's units scale and with object as focus distance setup

Exact steps for others to reproduce the error

  1. In new file set up scene to test DOF. Use object option to set up distance.
  2. In 3D view set "depth of field" from Properties panel
    Снимок экрана из 2016-04-15 16:44:22.png
  3. In "Scene" tab set metric units and change Scale property. DOF effect will change, though not supposed.
    Снимок экрана из 2016-04-15 16:44:53.png

Test file DOFtest.blend

This bug affects 3D-View only

**Blender Version** Broken: 2.77 3D view's depth of field isn't displayed correctly with scene's units scale and with object as focus distance setup **Exact steps for others to reproduce the error** 1) In new file set up scene to test DOF. Use object option to set up distance. 2) In 3D view set "depth of field" from Properties panel ![Снимок экрана из 2016-04-15 16:44:22.png](https://archive.blender.org/developer/F303897/Снимок_экрана_из_2016-04-15_16_44_22.png) 3) In "Scene" tab set metric units and change Scale property. DOF effect will change, though not supposed. ![Снимок экрана из 2016-04-15 16:44:53.png](https://archive.blender.org/developer/F303899/Снимок_экрана_из_2016-04-15_16_44_53.png) Test file [DOFtest.blend](https://archive.blender.org/developer/F303896/DOFtest.blend) This bug affects 3D-View only
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Bastien Montagne self-assigned this 2016-04-15 16:16:56 +02:00

This issue was referenced by 6bc2ba2111

This issue was referenced by 6bc2ba21117a25c8a7100b282cc2377e1adf7075

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48157
No description provided.